# filelib

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
doc/agent/: SKILL.md  SKILL_zh.md
filelib/: operator.py
src/filelib/: __init__.py  downloader.py  identifier.py  operator.py  printer.py  resolver.py  scanner.py  skill_deployer.py
tests/: test_operator.py  test_scanner.py  test_skill_deployer.py
